# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: engine.py
gendiff/scripts/: gendiff.py
